services/iam-service/k8s/argocd/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventos-api
  namespace: eventos-peru
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type, Accept, Origin, X-Requested-With"
    nginx.ingress.kubernetes.io/limit-rps: "20"
spec:
  ingressClassName: nginx
  rules:
    - host: eventos.emeday.inc
      http:
        paths:
          # 👇 Ruta especial SOLO para /openapi.json
          #   - use-regex está en "true"
          #   - aquí $1="" y $2="openapi.json"
          #   - rewrite-target "/$2" => "/openapi.json" (no se rompe)
          - path: /()(openapi.json)
            pathType: ImplementationSpecific
            backend:
              service:
                name: iam-service
                port:
                  number: 80

          # IAM (todas las demás rutas /iam/...)
          - path: /iam(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: iam-service
                port:
                  number: 8010

          # CATALOGO
          - path: /catalogo(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: catalogo-service
                port:
                  number: 80

          # PROVEEDORES
          - path: /proveedores(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: proveedores-service
                port:
                  number: 80

          # CONTRATACION
          - path: /contratacion(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: contratacion-service
                port:
                  number: 80
